--- a/ReconScript/readme
+++ b/ReconScript/readme
@@ -1,6 +1,6 @@
 see reconsubhTest which is being updated frequently with more tools being added.
 
-Keep in mind, it just doesn't work like magic out of this air. First of all need to dowload the below listed tool properly in your unix kernel.
+Keep in mind, it just doesn't work like magic out of thin air. First of all need to dowload the below listed tool properly in your unix kernel.
 
 Download these tools properly in your unix kernel via google/youtube tutorials. It's easy:
 i) Assetfinder
