--- a/ReconScript/readme
+++ b/ReconScript/readme
@@ -9,6 +9,7 @@ iii) Sublist3r
 iv) nmap
 v) Aquatone
 vi) Waybackurls
+vii) ffuf
 
 Download these above tools in your very unix kernel. Make sure it works fine. You can watch youtube tutorials. It's easy. Then run my script.
 
