--- a/ReconScript/readme
+++ b/ReconScript/readme
@@ -26,8 +26,8 @@ ii) reconsubhTest facebook.com [ This will start hacking facebook.com ]
 
 Bonus Section:
 --------------
-I recommend not to use this tool just to find bugs incase if you're just starting to do Web Application Testing, Pentesting, Bug Bounty Hunting, etc.
-Even if you use that tool and you get the fascinating result, it doesn't impact much. If you don't know the basic of networking, programming and web
+I recommend not to use this tool illegally just to find bugs incase if you're just starting to do Web Application Testing, Pentesting, Bug Bounty Hunting, etc.
+Even if you use this tool and you get the fascinating result, it wouldn't even create positive impact in your skills and understanding unless you would gain deeper networking, client-server, basic programming, knowledge, etc. . If you don't know the basic of networking, programming and web
 app workflow mechanism, it'd be completely waste.
 
 So, my suggestion is first we need to have a deeper understanding of web application workflow, networking, client-server concept before starting out.
