--- a/ReconScript/readme
+++ b/ReconScript/readme
@@ -1,8 +1,10 @@
 See reconsubhTest which is being updated frequently with more tools being added.
 
-Keep in mind, it just doesn't work like magic out of thin air. First of all need to dowload the below listed tool properly in your unix kernel.
+Keep in mind, it just doesn't work like magic out of thin air. First of all need 
+to dowload the below listed tool properly in your unix kernel.
 
-Download these tools properly in your unix kernel via google/youtube tutorials. It's easy:
+Download these tools properly in your unix kernel via google/youtube tutorials. 
+It's easy:
 i) Assetfinder
 ii) Subfinder
 iii) Sublist3r
@@ -11,7 +13,8 @@ v) Aquatone
 vi) Waybackurls
 vii) ffuf
 
-Download these above tools in your very unix kernel. Make sure it works fine. You can watch youtube tutorials. It's easy. Then run my script.
+Download these above tools in your very unix kernel. Make sure it works fine. 
+You can watch youtube tutorials. It's easy. Then run my script.
 
 Follow the steps as shown in the example.
 -----------------------------------------------------------------------
@@ -26,10 +29,15 @@ ii) reconsubhTest facebook.com [ This will start hacking facebook.com ]
 
 Bonus Section:
 --------------
-I recommend not to use this tool illegally just to find bugs incase if you're just starting to do Web Application Testing, Pentesting, Bug Bounty Hunting, etc.
-Even if you use this tool and you get the fascinating result, it wouldn't even create positive impact in your skills and understanding unless you would gain deeper networking, client-server, basic programming, knowledge, etc. . If you don't know the basic of networking, programming and web
+I recommend not to use this tool illegally just to find bugs incase if you're just starting 
+to do Web Application Testing, Pentesting, Bug Bounty Hunting, etc.
+Even if you use this tool and you get the fascinating result, it wouldn't even create positive
+impact in your skills and understanding unless you would gain deeper networking, client-server, basic programming, knowledge, etc. . If you don't know the basic of networking, programming and web
 app workflow mechanism, it'd be completely waste.
 
-So, my suggestion is first we need to have a deeper understanding of web application workflow, networking, client-server concept before starting out.
-Read books like "Bug Bounty Bootcamp by Vickie li", "Web Application Hackers Handbook", "Real-World Bug Hunting: A Field Guide to Web Hacking". These 
-books will give you the deeper concept of web application workflow, its mechanisms. You'd figure it out yourself how to exploit it.
+So, my suggestion is first we need to have a deeper understanding of web application workflow, 
+networking, client-server concept before starting out.
+Read books like "Bug Bounty Bootcamp by Vickie li", "Web Application Hackers Handbook", 
+"Real-World Bug Hunting: A Field Guide to Web Hacking". These 
+books will give you the deeper concept of web application workflow, its mechanisms. 
+You'd figure it out yourself how to exploit it.
